--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-router-dom": "^4.0.8",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "@uifabric/example-app-base": "^5.1.1",
     "awesome-typescript-loader": "^3.2.3",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.5",
     "file-loader": "^0.11.2",
+    "office-ui-fabric-react": "^5.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
